<resources>
    <string name="app_name">TMDBMovie</string>
    <string name="get_as_json">Get as JSON</string>
    <string name="get_as_model">Get as Model</string>
    <string name="imageFromMovie">Image From Movie</string>
    <string name="get_as_observable">Get as Observable</string>
    <string name="get_as_database">Get as Database</string>
    <string name="electroshock">ELECTROSHOCK</string>
    <string name="dominion">Dominion</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_this_is_json_fragment">Hello, This is JSON Fragment</string>
</resources>